5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1674_1101.log
== TEST (2019-04-25 10:36:56) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.lower() == "R":
	if c > 500:
		print("Valor total: R$",c*0.65)
		else:
			print("Valor total: R$",c*0.44)
elif t.lower() == "C":
	if c <= 1000:
		print("Valor total: R$",c*0.55)
		else:
			print("Valor total: R$",c*0.60)
elif t.lower() == "I":
	if c <= 5000:
		print("Valor total: R$",c*0.55)
		else:
			print("Valor total: R$",c*0.60)

			

-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:37:22) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.lower() == "R":
	if c > 500:
		print("Valor total: R$",c*0.65)
	else:
		print("Valor total: R$",c*0.44)
elif t.lower() == "C":
	if c <= 1000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)
elif t.lower() == "I":
	if c <= 5000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)

			

-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:25) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.lower() == "R":
	if c > 500:
		print("Valor total: R$",c*0.65)
	else:
		print("Valor total: R$",c*0.44)
elif t.lower() == "C":
	if c <= 1000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)
elif t.lower() == "I":
	if c <= 5000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)

			

-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:35) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",c*0.65)
	else:
		print("Valor total: R$",c*0.44)
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)

			

-- OUTPUT:
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:39:53) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",c*0.65)
	else:
		print("Valor total: R$",c*0.44)
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)

			

-- EXECUTION TIME:
0.124442
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:40:42) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",c*0.65)
	else:
		print("Valor total: R$",c*0.44)
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)
else:
	print("Dados invalidos")
			

-- EXECUTION TIME:
0.19621
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:40:47) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",c*0.65)
	else:
		print("Valor total: R$",c*0.44)
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",c*0.55)
	else:
		print("Valor total: R$",c*0.60)
else:
	print("Dados invalidos")
			

-- OUTPUT:
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:42:31) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",round(c*0.65,2))
	else:
		print("Valor total: R$",round(c*0.44,2))
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",round(c*0.50,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
else:
	print("Dados invalidos")
			

-- EXECUTION TIME:
0.10822
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Valor total: R$ -28.0
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:42:32) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",round(c*0.65,2))
	else:
		print("Valor total: R$",round(c*0.44,2))
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",round(c*0.50,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
else:
	print("Dados invalidos")
			

-- OUTPUT:
Valor total: R$ -28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:42:51) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",round(c*0.65,2))
	else:
		print("Valor total: R$",round(c*0.44,2))
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
else:
	print("Dados invalidos")
			

-- EXECUTION TIME:
0.140904
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:42:51) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",round(c*0.65,2))
	else:
		print("Valor total: R$",round(c*0.44,2))
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
else:
	print("Dados invalidos")
			

-- OUTPUT:
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:43:32) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",round(c*0.65,2))
	else:
		print("Valor total: R$",round(c*0.44,2))
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
else:
	print("Dados invalidos")
			

-- EXECUTION TIME:
0.176
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:49:27) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if t.upper() == "R":
	if c > 500:
		print("Valor total: R$",round(c*0.65,2))
	else:
		print("Valor total: R$",round(c*0.44,2))
elif t.upper() == "C":
	if c <= 1000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
elif t.upper() == "I":
	if c <= 5000:
		print("Valor total: R$",round(c*0.55,2))
	else:
		print("Valor total: R$",round(c*0.60,2))
else:
	print("Dados invalidos")
			

-- OUTPUT:
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:51:50) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.142738
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 4
    if < 0:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:50) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- ERROR:
File "XXXX", line 4
    if < 0:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:58) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:51:59) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.128157
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:51:59) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.160374
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:00) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:45) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:54:35) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

print('Entradas: ',c,"kwh",'e tipo',t)
if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.207683
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:54:36) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

print('Entradas: ',c,"kwh",'e tipo',t)
if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:09) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

print('Entradas: ',c,"kwh",'e tipo',t)
if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:20) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

print('Entradas: ',c,"kwh",'e tipo',t)
if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:56:02) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

print('Entradas: ',c,"kwh",'e tipo',t.upper())
if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.13087
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:56:03) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

print('Entradas: ',c,"kwh",'e tipo',t.upper())
if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	else:
		print("Dados invalidos")
			

-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:46) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

print('Entradas: ',c,"kwh",'e tipo',t)
if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper()!="R" or t.upper()!="C" or t.upper()!="I":
		print("Dados invalidos")
			

-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:03:47) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

print('Entradas: ',c,"kwh",'e tipo',t)
if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print("Valor total: R$",round(c*0.65,2))
		else:
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print("Valor total: R$",round(c*0.55,2))
		else:
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper()!="R" or t.upper()!="C" or t.upper()!="I":
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.122991
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:06:36) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.65,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper()!="R" or t.upper()!="C" or t.upper()!="I":
		print('Entradas: ',c,"kwh",'e tipo',t)
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.141456
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:06:38) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.65,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper()!="R" or t.upper()!="C" or t.upper()!="I":
		print('Entradas: ',c,"kwh",'e tipo',t)
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.159036
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:06:38) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.65,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper()!="R" or t.upper()!="C" or t.upper()!="I":
		print('Entradas: ',c,"kwh",'e tipo',t)
		print("Dados invalidos")
			

-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:06:38) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.65,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper()!="R" or t.upper()!="C" or t.upper()!="I":
		print('Entradas: ',c,"kwh",'e tipo',t)
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.178549
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  955.5 kwh e tipo R
Valor total: R$ 621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:06:38) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))

if c < 0:
	print('Dados invalidos')
else:
	if t.upper() == "R":
		if c > 500:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.65,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.44,2))
	elif t.upper() == "C":
		if c <= 1000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper() == "I":
		if c <= 5000:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.55,2))
		else:
			print('Entradas: ',c,"kwh",'e tipo',t)
			print("Valor total: R$",round(c*0.60,2))
	elif t.upper()!="R" or t.upper()!="C" or t.upper()!="I":
		print('Entradas: ',c,"kwh",'e tipo',t)
		print("Dados invalidos")
			

-- EXECUTION TIME:
0.170661
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  955.5 kwh e tipo R
Valor total: R$ 621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:24:43) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))
-- EXECUTION TIME:
0.194223
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
consumo: T inst:
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
consumo: T inst:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:44) 
-- CODE:
c = float(input("consumo: "))
t = str(input("T inst: "))
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:56:42) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas: ',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$: ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$: ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$: ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$: ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$: ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$: ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.166086
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo i
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo r
Valor total: R$:  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:56:44) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas: ',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$: ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$: ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$: ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$: ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$: ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$: ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo i
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:57:48) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas: ',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.159077
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo i
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo r
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:57:49) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas: ',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo i
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:59:31) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas: ',a, ' kwh e tipo ', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.194056
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kwh e tipo  i
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kwh e tipo  r
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:59:32) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas: ',a, ' kwh e tipo ', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas:  -56.0  kwh e tipo  i
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:59:53) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas:',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo i
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:00:01) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas:',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.125216
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo i
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo r
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:00:02) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas:',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'c') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo i
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:02:44) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas:',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'r') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.131899
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo i
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo r
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:03:18) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas:',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'r') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo i
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:03:18) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas:',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$ ',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$ ',round(a*0.65,2))
	elif(b == 'r') and (a<= 500):
		print('Valor total: R$ ',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$ ',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$ ',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo i
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:03:49) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: ')).lower()

print('Entradas:',a, 'kwh e tipo', b)
if a > 0:
	if (b == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.174402
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo i
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo r
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:06:43) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kwh e tipo', b)
if (a > 0) and ((b.lower() == 'r')or (b..lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.170901
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 5
    if (a > 0) and ((b.lower() == 'r')or (b..lower() == 'i') or (b.lower() == 'c')):
                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:06:44) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kwh e tipo', b)
if (a > 0) and ((b.lower() == 'r')or (b..lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- ERROR:
File "XXXX", line 5
    if (a > 0) and ((b.lower() == 'r')or (b..lower() == 'i') or (b.lower() == 'c')):
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:06:57) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kwh e tipo', b)
if (a > 0) and ((b.lower() == 'r')or (b.lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:07:01) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kwh e tipo', b)
if (a > 0) and ((b.lower() == 'r')or (b.lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.14171
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:07:02) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kwh e tipo', b)
if (a > 0) and ((b.lower() == 'r')or (b.lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:08:03) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kwh e tipo', b.upper())
if (a > 0) and ((b.lower() == 'r')or (b.lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:08:12) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kwh e tipo', b.upper())
if (a > 0) and ((b.lower() == 'r')or (b.lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:08:18) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kwh e tipo', b.upper())
if (a > 0) and ((b.lower() == 'r')or (b.lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.0973449
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:11:01) 
-- CODE:
a = float(input('consumo: '))
b = str(input('tipo: '))

print('Entradas:',a, 'kWh e tipo',b)
if (a > 0) and ((b.lower() == 'r')or (b.lower() == 'i') or (b.lower() == 'c')):
	if (b.lower() == 'c') and (a > 1000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'c') and (a <= 1000):
		print('Valor total: R$',round(a*0.55,2))
	elif (b.lower() == 'r') and (a > 500):
		print('Valor total: R$',round(a*0.65,2))
	elif(b.lower() == 'r') and (a<= 500):
		print('Valor total: R$',round(a*0.44,2))
	elif (b.lower() == 'i') and (a > 5000):
		print('Valor total: R$',round(a*0.60,2))
	elif (b.lower() == 'i') and (a <= 5000):
		print('Valor total: R$',round(a*0.55,2))
	else:
		print('Dados invalidos')
else:
	print('Dados invalidos')
	
-- EXECUTION TIME:
0.146486
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
